# DeskPet

./: .gitignore  CMakeLists.txt  conandata.yml  conanfile.py  init.bat
CliPet/: CMakeLists.txt
CliPet/src/: NixMain.cpp  Win32Main.cpp
PetAI/: CMakeLists.txt
PetAI/include/: PetAI.h  PetEntity.hpp
PetAI/private/: AVLTree.hpp  BehaviorTree.hpp  Blackboard.hpp  FNV1a.hpp  FileLoader.hpp  PetBehaviors.hpp  PetManager.hpp  PetRenderer.hpp
PetAI/src/: Allocator.cpp  BehaviorTree.cpp  Blackboard.cpp  EntryPoint.c  FileLoader.cpp  PetAI.cpp  PetBehaviors.cpp  PetManager.cpp  PetRenderer.cpp
SysLib/: CMakeLists.txt
SysLib/include/: SysLib.h
SysLib/private/: CPPBase.hpp
SysLib/src/cpp/: CPPBaseImpl.cpp
SysLib/src/win32/: NixImpl.cpp  Win32Impl.cpp
SysLib/tests/: CMakeLists.txt  SysLibTests.cpp
Win32CliPet/: CMakeLists.txt
Win32CliPet/src/: Main.cpp
cmake/: GenVsFilters.cmake  SetCompileFlags.cmake
